<resources>
    <string name="app_name">STENOGRAFFIA</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="api_key">AIzaSyAIYgp4_fQM9IN3P5GI2a_s2vxNz4ysrjQ</string>

    <!--labels-->
    <string name="menu_profile">Мой профиль</string>
    <string name="menu_map">Карта</string>
    <string name="menu_routes">Маршруты</string>
    <string name="menu_surface_exchange">Биржа поверхностей</string>
    <string name="menu_settings">Настройки</string>
    <string name="fragment_route_one">Маршрут</string>
    <string name="fragment_edit_acc">Редактирование</string>

    <!--sign in activity-->
    <string name="title">STENOGRAFFIA INTERNATIONAL STREET ART FESTIVAL</string>
    <string name="hint_password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="do_not_have_acc">Еще нет аккаунта?</string>
    <string name="register">Зарегистрируйся</string>

    <!--routes fragment-->
    <string name="all_routes">Все маршруты</string>
    <string name="my_routes">Мои маршруты</string>

    <!--route element-->
    <string name="popular_objects">Популярные объекты:</string>
    <string name="route_length">Длина маршрута:</string>

    <!--surface exchange fragment-->
    <string name="what_title">&lt;&lt;What!?&gt;&gt;</string>
    <string name="what_text">Открытый сбор городских поверхностей, которые могут
        стать новыми арт-объектами.<br /><br />
        Зайдите в панорамы электронных карт и сделайте скриншоты стены/будки/забора.
        Лучше с нескольких ракурсов и издалека, в контексте окружающего
        пространства. Если же вы идете на работу, решили выгулять собаку
        или вынести мусор — сделайте реальные фото.<br /><br />
        Добавте фотографии, запишите адрес и краткое
        описание и нажмите кнопку &lt;Отправить&gt;.</string>
    <string name="hint_address">Адрес</string>
    <string name="hint_description">Описание</string>
    <string name="send">Отправить</string>

    <!--profile fragment-->
    <string name="btn_edit">Редактировать</string>

    <!--settings fragment-->
    <string name="payment_method">Способ оплаты</string>
    <string name="confidential">Конфиденциальность</string>
    <string name="about_us">О нас</string>
    <string name="help">Помощь</string>
    <string name="log_out">Выйти</string>

    <!--route fragment-->
    <string name="buy">Добавить в мои маршруты</string>

    <!--edit acc fragment-->
    <string name="hint_user_name">Имя</string>
    <string name="hint_email">Email</string>
    <string name="save">Сохранить</string>
    <string name="hint_new_password">Введите новый пароль</string>

    <!--registration activity-->
    <string name="register1">Зарегистрироваться</string>
    <string name="registration">Регистрация</string>
    <string name="already_have_acc">Уже есть аккаунт?</string>
</resources>