<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_map">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.stenograffia.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_editAccFragment"
            app:destination="@id/editAccFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.stenograffia.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_routes"
        android:name="com.example.stenograffia.ui.routes.RoutesFragment"
        android:label="@string/menu_routes"
        tools:layout="@layout/fragment_routes" >
        <action
            android:id="@+id/action_nav_routes_to_routeFragment"
            app:destination="@id/routeFragment" />
        <action
            android:id="@+id/action_nav_routes_to_boughtRouteFragment"
            app:destination="@id/boughtRouteFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_surface_exchange"
        android:name="com.example.stenograffia.ui.surfaceExchange.SurfaceExchangeFragment"
        android:label="@string/menu_surface_exchange"
        tools:layout="@layout/fragment_surface_exchange" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.stenograffia.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/routeFragment"
        android:name="com.example.stenograffia.ui.route.RouteFragment"
        android:label="@string/fragment_route_one"
        tools:layout="@layout/fragment_route" />

    <fragment
        android:id="@+id/editAccFragment"
        android:name="com.example.stenograffia.ui.editAcc.EditAccFragment"
        android:label="@string/fragment_edit_acc"
        tools:layout="@layout/fragment_edit_acc" >
        <action
            android:id="@+id/action_editAccFragment_to_nav_profile"
            app:destination="@id/nav_profile" />
    </fragment>

    <fragment
        android:id="@+id/boughtRouteFragment"
        android:name="com.example.stenograffia.ui.boughtRoute.BoughtRouteFragment"
        android:label="@string/fragment_route_one"
        tools:layout="@layout/fragment_route_map">
        <action
            android:id="@+id/action_boughtRouteFragment_to_routeGuideFragment"
            app:destination="@id/routeGuideFragment" />
    </fragment>

    <fragment
        android:id="@+id/routeGuideFragment"
        android:name="com.example.stenograffia.ui.routeGuide.RouteGuideFragment"
        tools:layout="@layout/fragment_route_guide" />
</navigation>