<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.surfaceExchange.SurfaceExchangeFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/image_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/what_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/frame_what_block"
            android:orientation="horizontal">

            <TextView
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_marginHorizontal="10dp"
                android:text="@string/what_title"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_what_block"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:background="@drawable/selector_btn_what_block" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/what_text_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/frame_what_text"
            android:padding="10dp">

            <TextView
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="0.5dp"
                android:text="@string/what_text"
                android:textSize="12sp" />

        </FrameLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_add_photos_surface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/bg_add_photos_surface"
        android:src="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/what_frame" />

    <EditText
        android:id="@+id/address"
        style="@style/edit_text"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="25dp"
        android:hint="@string/hint_address"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_photos_surface" />

    <EditText
        android:id="@+id/description"
        style="@style/edit_text"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_description"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <Button
        android:id="@+id/btn_send"
        style="@style/text"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        android:background="@drawable/bg_btn"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>